feat(like): add like action
